--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,3 +3,4 @@ html{font-size: calc(100vw/7.5); color: #333;}
 body{font-family: 'PingFang SC','Helvetica Neue',"微软雅黑",'Arial'; font-size: 12px;}
 ul,li{list-style: none;}
 input::-webkit-input-placeholder{ color: #999;}
+.hr{ width: 100%; height: 10px; background: #f7f7f7;}
